Add visual polish and gameplay refinements
- Fire gradient title from yellow to red
- Light blue background color (#d4e9ff)
- Player promotion bonus (1.25x engagement and stability)
- Checkmark overlay when player promotes a post
- Robot indicator moves when suppressing to show algorithm's new pick
- Censorship backlash display with escalating penalties
- Stability guide showing reaction rankings above controls
- Feed title changed to "Wildfire Social"
- Intro text updates (suppress fake news, investor growth)
- Removed controls section from start screen

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: #e8dff5;
+    background-color: #d4e9ff;
     display: flex;
     justify-content: center;
     align-items: center;
