--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: #d4e9ff;
+    background-color: #a8d4f0;
     display: flex;
     justify-content: center;
     align-items: center;
